added 61 login and auth

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,3 +8,16 @@
     margin-top: 10px;
     margin-left: 20px;
 }
+
+.loginBlock {
+    float: right;
+}
+
+.loginBlock a {
+    text-decoration: none;
+    color: white;
+}
+
+.loginBlock a.activeLink {
+    color: #05ffca;
+}
