--- a/src/components/Common/FormsControls/FormsControls.module.css
+++ b/src/components/Common/FormsControls/FormsControls.module.css
@@ -14,4 +14,43 @@
     color: red;
 }
 
+.textarea,
+.textareaDialog {
+    outline: none;
+    resize: none;
 
+    font-size: 16px;
+    line-height: 30px;
+    font-style: italic;
+
+    padding: 2px 5px;
+
+    width: 370px;
+    height: 30px;
+    background-color: rgba(255, 255, 255, 0.103);
+    border: 1px solid rgba(75, 70, 70, 0.473);
+    border-radius: 12px;
+
+    overflow: hidden;
+}
+
+.textareaDialog {
+    margin-top: 12px;
+    width: 430px;
+}
+
+.textarea.error,
+.textareaDialog.error {
+    border: 2px solid red;
+}
+.errorMessage {
+    font-weight: 600;
+    color: red;
+}
+
+.inputField {
+    outline: none;
+    border: none;
+    border-radius: 3px;
+    padding: 3px 6px;
+}
