--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,23 +1,47 @@
 .header {
-    grid-area: h;
-    background-color: #ffe23b;
+    width: 100%;
+    height: 70px;
+    position: fixed;
+    z-index: 20;
 }
 
-.header img {
-    width: 60px;
-    margin-top: 10px;
-    margin-left: 20px;
+.banner  {
+    width: 100%;
+    height: 100%;
+
+    background: -webkit-linear-gradient(to right, #434343, #000000);
+    background: linear-gradient(to right, #434343, #000000);
+
+    display: flex;
+    justify-content: flex-end;
 }
 
-.loginBlock {
-    float: right;
+.logFrom {
+    display: flex;
 }
 
-.loginBlock a {
-    text-decoration: none;
-    color: white;
+.login,
+.logoutBtn {
+    padding: 15px 45px 0 0;
+    color: #cccccc;
+    font-size: 21px;
 }
 
-.loginBlock a.activeLink {
-    color: #05ffca;
+.logoutBtn:hover {
+    cursor: pointer;
+    opacity: .8;
+}
+
+.name {
+    color: #cccccc;
+    padding-right: 45px;
+}
+
+.error {
+    width: 210px;
+
+    text-align: center;
+    color: darkred;
+    border: 1px solid darkred;
+    border-radius: 3px;
 }
