--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,19 +1,50 @@
 .nav {
-    grid-area: n;
-    background-color: #ffe23b;
-    padding: 30px;
+    margin-top: 70px;
+       width: 13%;
+    height: calc(100vh - 100px);
+
 }
 
-.item.settings a {
-    color: #f80b08;
+.navList {
+    padding-top: 30px;
+    padding-left: 30px;
+    width: 11%;
+    height: 100%;
+
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+
+    background: -webkit-linear-gradient(to right, #414345, #2325261c);
+    background: linear-gradient(to right, #414345, #23252636);
+}
+
+.item {
+    height: 30px;
+    font-weight: 600;
 }
 
 .item a {
-    text-decoration: none;
-    color: white;
+    display: block;
+    height: 30px;
+    font-size: 18px;
+    color: aliceblue;
 }
 
-.item a.activeLink {
-    color: #05ffca;
+.item a.activeNav {
+    color: rgba(255,255,255,.3);
+    text-shadow: 0 0 15px rgba(255,255,255,.5), 0 0 10px rgba(255,255,255,.5);
+}
+
+.friends {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    width: 100%;
+    height: auto;
+
+    margin-top: 5px;
+    margin-bottom: 20px;
 }
 
