--- a/src/components/Common/Paginator/Paginator.module.css
+++ b/src/components/Common/Paginator/Paginator.module.css
@@ -2,7 +2,8 @@
     margin: 10px;
     display: flex;
     align-items: center;
-
+padding-left: 100px;
+    padding-top: 50px;
     height: 25px;
 }
 .pageNumber {
