--- a/src/components/Messages/Dialogs/Dialogs.module.css
+++ b/src/components/Messages/Dialogs/Dialogs.module.css
@@ -1,6 +1,7 @@
 .content {
-    padding-top: 30px;
 
+    padding-top: 50px;
+    padding-left: 100px;
     width: 60%;
     max-width: 450px;
 
@@ -79,3 +80,5 @@
     color: #777;
     cursor: pointer;
 }
+
+
