--- a/src/App.module.css
+++ b/src/App.module.css
@@ -25,9 +25,7 @@ a:hover {
 .bg {
     width: 100%;
     height: 100%;
-    background: -webkit-linear-gradient(to right, #414345, #2325261c);
-    background: linear-gradient(to right, #414345, #23252636);
-    background-size: cover;
+    background-color: #7c7e80;
     opacity: .7;
     position: fixed;
     top: 0;
