--- a/src/components/Common/Paginator/Paginator.module.css
+++ b/src/components/Common/Paginator/Paginator.module.css
@@ -1,11 +1,13 @@
 .paginator {
+    min-width: 20%;
     margin: 10px;
     display: flex;
     align-items: center;
-padding-left: 100px;
+    padding-left: 100px;
     padding-top: 50px;
     height: 25px;
 }
+
 .pageNumber {
     padding: 2px;
     margin: 0 5px;
