--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,13 +5,11 @@
     z-index: 20;
 }
 
-.banner  {
+.banner {
     width: 100%;
     height: 100%;
-
-    background: -webkit-linear-gradient(to right, #434343, #000000);
-    background: linear-gradient(to right, #434343, #000000);
-
+    background-color: #7c7e80;
+    opacity: 0.5;
     display: flex;
     justify-content: flex-end;
 }
